--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
 						<li><a href="#about">About</a></li>
-						</i><a href="#contact">Contact</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div><!--/.nav-collapse-->
 			</div>
