--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		</div>
 		<div class="row-fluid pitch">
 			<div class="span5 offset1 vide">
-				<img class="img-polaroid" src="http://placehold.it/480*300">
+				<img class="img-polaroid" src="http://placehold.it/480x300">
 			</div>
 			<!--we define a new 'actions' div to contain statistics, order and share buttons.-->
 			<div class="span5 actions">
@@ -195,7 +195,7 @@
 		<!--http://placehold.it-->
 		<div class="row-fluid section1">
 			<div class="span5 offset1 asset">
-				<img class="img-polaroid" src="http://placehold.it/480*300">
+				<img class="img-polaroid" src="http://placehold.it/480x300">
 			</div>
 			<div class="span5 copy">
 				<p>
@@ -231,7 +231,7 @@
 				</p>
 			</div>
 			<div class="span5 asset">
-				<img class="img-polaroid" src="http://placehold.it/480*300">
+				<img class="img-polaroid" src="http://placehold.it/480x300">
 			</div>
 		</div>
 		
@@ -242,9 +242,9 @@
 			<div class="span10 offset1">
 				<h3>FAQ</h3>
 				<div class="accordion" id="accordion2">
-					<div class="accordiion-group">
+					<div class="accordion-group">
 						<div class="accordion-heading">
-							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
+						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
 						</div>
 						<div id="collapseOne" class="accordion-body collapse">
 							<div class="accordion-inner">
