Modify index.html depending on one topic, named life-show

--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
 		<!--www.google.com/fonts/specimen/Ubuntu#pairings-->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Product</h1>
+				<h1>Life Show</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
 				<!--special typography from bootstrap for lead paragraph.-->
 				<!--http://twitter.github.io/bootstrap/base-css.html#typography-->
-				<p class="lead">One sentence description.</p>
+				<p class="lead">About travel, food, animal...</p>
 			</div>
 		</div>
 		<div class="row-fluid pitch">
 			<div class="span5 offset1 vide">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<img class="img-polaroid" src="http://x1.zhuti.com/down/2012/11/30-xp/bltt-1.jpg">
 			</div>
 			<!--we define a new 'actions' div to contain statistics, order and share buttons.-->
 			<div class="span5 actions">
@@ -195,21 +195,11 @@
 		<!--http://placehold.it-->
 		<div class="row-fluid section1">
 			<div class="span5 offset1 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<img class="img-polaroid" src="http://www.fodizi.net/uploadfile/201304/9/205888169.jpg">
 			</div>
 			<div class="span5 copy">
 				<p>
-					Lorem ipsum dollor sit amet, consectetur adipiscing elit. Donec
-					porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-					mollis justo velit at nunc. Fusce nec egestas sem. Donec
-					fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-					volutpat lorem ut congue malesuada. In facilisis scelerisque
-					turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-					quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-					risus ultrices adipiscing. Lorem ipsum dollor sit amet,
-					consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-					rutrum, nunc leo tempus nisl, eu mollis justo velit at
-					nunc. Fusce nec egestas sem. Donec fringilla.
+					Paris is synonymous with all that is French. Known throughout the world as the "City of Light," Paris is celebrated for its beautiful city plan, its architecture, museums, bridges, cathedrals, parks, shopping, flea markets, sidewalk cafés, wide and luxurious boulevards, elegant cuisine, and numerous monuments. Once confined to an island in the middle of the Seine River, the Ile de la Cité, Paris, founded more than 2,000 years ago, quickly spread to both banks of the river—the rive droit (right bank) and the rive gauche (left bank). The right bank is known for being the commercial heart of the city while the left bank is home to the University of Paris and all that is intellectual and artsy. Paris has always been known to have the aura of romance and mystery and has been the setting for many novels and movies. A character in a play by Oscar Wilde said, "When good Americans die, they go to Paris."
 				</p>
 			</div>
 		</div>
@@ -217,21 +207,12 @@
 		<div class="row-fluid section2">
 			<div class="span5 offset1 copy copy-right">
 				<p>
-					Lorem ipsum dollor sit amet, consectetur adipiscing elit. Donec
-                                        porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-                                        mollis justo velit at nunc. Fusce nec egestas sem. Donec
-                                        fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-                                        volutpat lorem ut congue malesuada. In facilisis scelerisque
-                                        turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-                                        quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-                                        risus ultrices adipiscing. Lorem ipsum dollor sit amet,
-                                        consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-                                        rutrum, nunc leo tempus nisl, eu mollis justo velit at
-                                        nunc. Fusce nec egestas sem. Donec fringilla.
+					The idea, begun in Naples, Italy, and called “Suspended Coffee” — i.e., a customer pays for a coffee and “banks” it for someone less fortunate who could use a jolt of caffeine and good will — has become an international internet sensation with coffee shops in Europe and North America participating in the movement.
+					The tradition of “suspended coffee” — or “caffe sospeso” in Italian — is a long-standing tradition in Italy that increased in popularity after World War II. It has been identified as a symbol of grassroots social solidarity, prompting its revival in response to the 2008 recession and ensuing eurozone crisis.
 				</p>
 			</div>
 			<div class="span5 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<img class="img-polaroid" src="http://www.tukuwa.com/uploadfile/2013/0117/20130117020805923.jpg">
 			</div>
 		</div>
 		
