--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+
+<a class="coinbase-button" data-code="071d75f78af672caaddeb0cc10761a82" href="https://coinbase.com/checkouts/071d75f78af672caaddeb0cc10761a82">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
           <div class="row-fluid">
 
