--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
+          
 
-<a class="coinbase-button" data-code="071d75f78af672caaddeb0cc10761a82" href="https://coinbase.com/checkouts/071d75f78af672caaddeb0cc10761a82" align="center">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<a class="coinbase-button" data-code="071d75f78af672caaddeb0cc10761a82" href="https://coinbase.com/checkouts/071d75f78af672caaddeb0cc10761a82">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 
+	</div>
           </div>
           <div class="row-fluid">
 
